--- a/app/src/main/res/layout/activity_menu_details.xml
+++ b/app/src/main/res/layout/activity_menu_details.xml
@@ -1,11 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvMenuDetail"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/appbar_height"
+        android:fitsSystemWindows="true">
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="@dimen/spacing_large"
+            app:expandedTitleMarginStart="@dimen/spacing_large"
+            app:expandedTitleTextAppearance="@android:color/transparent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/ivCollapseThumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/big_logo"
+                app:layout_collapseMode="parallax" />
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvFoodTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_large"
+                android:layout_marginLeft="@dimen/margin_normal"
+                android:layout_marginRight="@dimen/margin_normal"
+                android:layout_marginTop="@dimen/margin_large"
+                android:text="@string/app_name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/font_larger" />
+
+            <TextView
+                android:id="@+id/tvFoodDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvFoodTitle"
+                android:lineSpacingExtra="8dp"
+                android:padding="@dimen/spacing_normal"
+                android:text="Lorem ipsum dolor sit amet, diam mauris eu, quisque id nec magna metus orci, semper justo hendrerit eu massa amet. Imperdiet fringilla praesent, lacus luctus diam luctus, orci metus et eu pharetra donec ipsum. Donec donec, imperdiet donec neque elit, at accumsan wisi purus in est. Sed gravida mollis commodo scelerisque nam, mi augue neque montes lorem curabitur, aliquet aliquam lacinia vulputate. Adipiscing senectus libero, luctus tellus vestibulum ac, nullam eget, non mauris tincidunt tellus. Aliquet venenatis in, lacus sagittis. Non platea ullamcorper, velit nec quisque eget et turpis, amet vulputate eget. Neque sit non, nunc mollis sit, porttitor nunc, eget amet. Sed dapibus eleifend felis et, imperdiet felis magna laoreet sed. Nullam nunc interdum mauris massa ornare lobortis, nullam etiam ac justo, voluptas ipsum vestibulum id nec aenean veritatis. Sed suscipit proin fames sed sed purus, vitae erat leo egestas augue quam, magna mauris lacus mi mi accumsan ipsum. Euismod mi ultricies in hendrerit ipsum euismod, id ac justo, est et maecenas donec tortor ut, laoreet arcu."
+                android:textSize="@dimen/font_normal" />
+
+        </RelativeLayout>
+
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <include
+        layout="@layout/layout_add_to_cart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom" />
+
+
+</android.support.design.widget.CoordinatorLayout>
