--- a/app/src/main/res/layout/layout_menu_cat_content.xml
+++ b/app/src/main/res/layout/layout_menu_cat_content.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/spacing_tiny"
     android:layout_marginLeft="@dimen/margin_small"
     android:layout_marginRight="@dimen/margin_small"
-    android:layout_marginBottom="@dimen/spacing_tiny"
+    android:layout_marginTop="@dimen/spacing_tiny"
+    app:cardBackgroundColor="@color/colorPrimary"
+    app:cardCornerRadius="@dimen/card_radius"
+    app:cardElevation="2dp"
     app:cardPreventCornerOverlap="false"
-    app:cardCornerRadius="@dimen/card_radius">
+    app:cardUseCompatPadding="true">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,8 +20,9 @@
         <ImageView
             android:id="@+id/ivCatThumb"
             android:layout_width="0dp"
-            android:layout_height="130dp"
-            android:scaleType="centerCrop"
+            android:layout_height="0dp"
+            android:contentDescription="@string/app_name"
+            app:layout_constraintDimensionRatio="h,16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,9 +32,9 @@
             android:id="@+id/tvCatTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/card_cat_title_bg"
+            android:background="@color/transparent_gray"
             android:padding="@dimen/padding_small"
-            android:text="hello"
+            android:text="@string/app_name"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/ivCatThumb"
             app:layout_constraintEnd_toEndOf="@id/ivCatThumb"
