--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#f83f67</color>
+    <color name="colorPrimaryDark">#d63759</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparent_gray">#4f0e0d0e</color>
@@ -12,6 +12,8 @@
 
 
     <color name="card_cat_title_bg">@color/transparent_gray</color>
+
+    <color name="btn_primary_bg">@color/colorPrimary</color>
 
 
 
