--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,12 @@
     <dimen name="padding_normal">16dp</dimen>
     <dimen name="padding_small">8dp</dimen>
 
+    <!--activity related sizes-->
+    <dimen name="appbar_height">300dp</dimen>
+    <dimen name="btn_height_large">60dp</dimen>
+    <dimen name="btn_height_normal">40dp</dimen>
+
+
 
     <!-- card view sizes -->
     <dimen name="card_radius">8dp</dimen>
