--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="transparent_gray">#4f0e0d0e</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
+
 
 
 
